going local. start changing benchmark formulation

--- a/01_introduction.tex
+++ b/01_introduction.tex
@@ -5,7 +5,7 @@ Automatic differentiation (AD) is a method that automatically calculates exact v
 According to \emph{\cite{SurveyAD}}, the first ideas of the AD concept date back to the 1950s \emph{\citep{nolan1953analytical, beda1959programs}}. More specifically, forward AD was discovered by \emph{\citet{wengert1964simple}}. It is more difficult to date exactly when backward AD was discovered, but the first article containing the essence of backward AD dates back to the 1960s \emph{\citep{boltyanskii1960theory}}. After the initial discovery of AD, further activities hibernated for a couple of years, before the method was rediscovered along with the birth of modern computers and computer languages. The first running computer program that used backward AD, and automatically computed the derivatives, came in 1980 by \emph{\citet{speelpenning1980compiling}}. Further research on the topic was done by, among others, \emph{\citet{griewank1989automatic}}. Today, AD is widely used in many applications. One of them is machine learning that specifically uses the backward AD method to minimize functions. 
 
 \section{Goal of the Thesis}
-This thesis' main focus is to use the forward AD method to solve partial differential equations(PDEs), using the new programming language Julia; and more specifically, solve PDEs that describe flow in porous media. Simulation of flow in porous media can refer to many things. Examples include modelling the movement of groundwater reserves, subsurface storage of CO$_2$ to reduce our environmental footprint, and reservoir simulations to maximize the amount of hydrocarbons we can recover from a reservoir. All these are examples of flow under the surface of the earth, but simulation of flow in porous media can also be used to understand flow inside batteries, fuel cells and textiles, for water purifying, and even to describe processes inside our human bodies. However, this thesis will solely look at using AD to simulate flow in oil reservoirs.
+This thesis' main focus is to use the forward AD method to solve partial differential equations(PDEs), using the new programming language Julia; and more specifically, solve PDEs that describe flow in porous media. Simulation of flow in porous media can be refer to several applications. Examples include modelling the movement of groundwater reserves, subsurface storage of CO$_2$ to reduce our environmental footprint, and reservoir simulations to maximize the amount of hydrocarbons we can recover from a reservoir. All these are examples of flow under the surface of the earth, but simulation of flow in porous media can also be used to understand flow inside batteries, fuel cells and textiles, for water purifying, and even to describe processes inside our human bodies. However, this thesis will solely look at using AD to simulate flow in oil reservoirs.
 
 \section{Oil Reservoirs}
 \label{sec:OilReservoirs}
