--- a/03_julia.tex
+++ b/03_julia.tex
@@ -71,9 +71,9 @@ The opportunity to use a debugger to find bugs and correct your code can be very
 
 \subsection{Benchmarking}
 \label{sec:benchmarking}
-When writing code for numerical simulations, or any other code for that matter, it is interesting to benchmark the simulation. Benchmarking will in this thesis refer to time spent to execute the function and the memory usage. Julia has a built in \texttt{@time} macro function \emph{\citep{@time}} that returns the time spent to execute the function together with the number of memory allocations and total memory used. This is a great tool, but especially time can be difficult to measure accurately. This is because there are numerous of other processes happening on your computer that there is impossible to control. Examples of this can be that you might get an email while you execute your code or the computer decides to take backup of some of your files. All these uncontrollable factors can affect the time spent to execute a simulation. 
+When writing code for numerical simulations, or any other code for that matter, it is interesting to benchmark test the simulation. Benchmark test will in this thesis refer to testing the time spent to execute the function and the memory usage and compare it to . Julia has a built in \texttt{@time} macro function \emph{\citep{@time}} that returns the time spent to execute the function together with the number of memory allocations and total memory used. This is a great tool, but especially time can be difficult to measure accurately. This is because there are numerous of other processes happening on your computer that there is impossible to control. Examples of this can be that you might get an email while you execute your code or the computer decides to take backup of some of your files. All these uncontrollable factors can affect the time spent to execute a simulation. 
 
-An option to reduce possible sources of errors is to benchmark the code multiple times and instead use the average time spent. However, then you have to write this extra code every time you want to benchmark a function. \emph{\cite{BenchmarkTools}} is a library that gives you a macro function called \texttt{@btime} that does exactly this so that you do not have to write repetitive code. It uses \texttt{@time} multiple times to get a result that is less prone to sources of errors. The primary macro function from \textit{BenchmarkTools} is however \texttt{@benchmark} which returns minimum, maximum, mean and average time, together with memory allocation and usage, and information on how many samples it has taken. All this is easy to use because of Julia's metaprogramming. It makes it quick and safe to benchmark all types of simulations and codes, without repeating your source code.
+An option to reduce possible sources of errors is to run the benchmark test code multiple times and use the average time spent. However, then you have to write this extra code every time you want to benchmark a function. \emph{\cite{BenchmarkTools}} is a library that gives you a macro function called \texttt{@btime} that does exactly this so that you do not have to write repetitive code. It uses \texttt{@time} multiple times to get a result that is less prone to sources of errors. The primary macro function from \textit{BenchmarkTools} is however \texttt{@benchmark} which returns minimum, maximum, mean and average time, together with memory allocation and usage, and information on how many samples it has taken. All this is easy to use because of Julia's metaprogramming. It makes it quick and safe to benchmark all types of simulations and codes, without repeating your source code.
 
 \subsection{Parallel Computing}
 \label{sec:parallelComputing}
