--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -5,6 +5,6 @@ This thesis gives an introduction to what Automatic Differentiation (AD) is and 
 
 Three different AD libraries has been implemented in Julia and compared to implementations from the MATLAB Reservoir Simulation Toolbox (MRST) \emph{\citep{mrstHomepage}}, created by the Computational Geosciences  group  in  the  department  of  Mathematics  and  Cybernetics  at  SINTEF Digital. This is a toolbox meant for quick prototyping with high-level and user-friendly AD tools. The first two implementations in Julia are inspired by the AD tools in MRST and they are called \texttt{ForwardAutoDiff}(\texttt{FAD}) and \texttt{CustomJacobianAutoDiff}(\texttt{CJAD}). The third implementation is inspired by the implementation of AD in OPM \emph{\citep{opm}}. OPM is a toolbox by the same group at SINTEF, made for creating efficient industrial simulators in C and C++. 
 
-To benchmark the three AD methods, two simulations have been implemented. The first is a single-phase flow solver, simulating the pressure drop in a reservoir when producing oil. \texttt{FAD} is the slowest method being approximately two times slower than \texttt{CJAD} and the implementation in MRST. While \texttt{CJAD} and MRST perform very similar, the method of Local AD is approximately six times faster than these two. The second implemented simulation is a two-phase flow solver, simulating how water flows when injected into a reservoir. This simulation is implemented for \texttt{CJAD} and MRST, which again perform similarly, as well as the method using local AD, which is approximately five times faster.
+To benchmark test the three AD methods, two simulations have been implemented. The first is a single-phase flow solver, simulating the pressure drop in a reservoir when producing oil. \texttt{FAD} is the slowest method being approximately two times slower than \texttt{CJAD} and the implementation in MRST. While \texttt{CJAD} and MRST perform very similar, the method of Local AD is approximately six times faster than these two. The second implemented simulation is a two-phase flow solver, simulating how water flows when injected into a reservoir. This simulation is implemented for \texttt{CJAD} and MRST, which again perform similarly, as well as the method using local AD, which is approximately five times faster.
 
-The benchmarks give promising results indicating that Julia could be a language where it is possible to write prototypes of simulators, using a user-friendly AD tool like \texttt{CJAD}, as well as creating high performance industrial simulators, using an AD tool like local AD.
+The benchmark tests give promising results indicating that Julia could be a language where it is possible to write prototypes of simulators, using a user-friendly AD tool like \texttt{CJAD}, as well as creating high performance industrial simulators, using an AD tool like local AD.
