changed benchmark formulations

--- a/frontmatter/preface.tex
+++ b/frontmatter/preface.tex
@@ -1,7 +1,7 @@
 %\let\cleardoublepage\clearpage
 \addcontentsline{toc}{chapter}{Preface}
 \chapter*{Preface}
-This Master's thesis was created under the Department of Mathematical Sciences, at the Norwegian University of Science and Technology in collaboration with SINTEF Digital. 
+This master's thesis is part of my Master of Science in Industrial Mathematics under the Department of Mathematical Sciences, at the Norwegian University of Science and Technology. The thesis is in collaboration with SINTEF Digital. 
 
 I would like to thank the group from the Computational Geosciences in the department of Mathematics and Cybernetics at SINTEF Digital, consisting of my supervisor Knut-Andreas Lie, Olav Møyner, Øystein Klemetsdal and Atgeirr Rasmussen, for valuable guidance through this thesis.
 
