--- a/04_implementation.tex
+++ b/04_implementation.tex
@@ -1,6 +1,6 @@
 \chapter{Implementation}
 \label{ch:Implementation}
-This chapter will give implementation-specific details on how to implement AD in Julia and perform benchmarks against other AD libraries in both Julia and MATLAB.
+This chapter will give implementation-specific details on how to implement AD in Julia and perform benchmark tests against other AD libraries in both Julia and MATLAB.
 
 \section{Automatic Differentiation in Julia}
 \label{sec:ADInJulia}
@@ -212,7 +212,7 @@ When both Jacobians are general sparse matrices, \texttt{CJAD} and \texttt{FAD} 
 I will call this method the \textit{matrix-multiplication} method. The second method keeps the vector form and uses element-wise multiplication between the vector and the \texttt{SparseMatrixCSC} matrix:
 \lstinputlisting{code/vectorTimesSparseJac.jl}
 I will call this the \textit{dot-multiplication} method. As it is difficult to say without first-hand knowledge of the implementation of \texttt{SparseMatrixCSC} which method is best to implement, I will test the two methods against each other. To test this, I have created a random vector of length 40 and a random sparse matrix of size $40\times40$ having 20 percent nonzero elements. I then perform the element-wise multiplication 10,000 times to separate the efficiency of the two methods. To check which method is actually more efficient, and by how much, we can use the \textit{@btime} macro function from the \emph{\cite{BenchmarkTools}} library. This function gives us the number of allocations, the amount of memory used, and the time spent.
-\autoref{tab:VectorMatrixMultiplicationSmallMatrix} reports the results\footnote{All benchmarks in this project are performed on a MacBook Pro (Retina, 13-inch, Late 2013), 2.8 GHz Intel Core i7 processor and 16 GB 1,600 MHz DDR3 memory.} from this test.
+\autoref{tab:VectorMatrixMultiplicationSmallMatrix} reports the results\footnote{All benchmark tests in this project are performed on a MacBook Pro (Retina, 13-inch, Late 2013), 2.8 GHz Intel Core i7 processor and 16 GB 1,600 MHz DDR3 memory.} from this test.
 \begin{table}[H]
     \centering
     \caption{The number of allocations, amount of memory, and time spent for element-wise multiplication of a vector of length 40 and a sparse matrix of size $40\times 40$ with 20 percent nonzero elements. The vector and matrix are multiplied together 10,000 times.}
@@ -330,12 +330,12 @@ The compiler does this because it does not understand that all the operations ar
 So what are the consequences for the implementation of \texttt{CJAD}? The result from \autoref{tab:dotOperator} implies that as long as we write all our vectorized code like the \texttt{dotsOutside} method or in such a manner that it is obvious for the compiler that it is only vectorized operations involved, we will have the same computational efficiency as for devectorized code. More specifically for the \texttt{CJAD} implementation, we often have a vector that is added/subtracted/divided/multiplied with another vector, and then the vectorized implementation will have the same computational efficiency as the devectorized. Since devectorized code is less readable,  implementations reported in the following will consist of vectorized code for readability.
 
 \section{Benchmarking Automatic Differentiation}
-As mentioned in \autoref{sec:ADInJulia}, Julia already has an AD library called \texttt{ForwardDiff} \citep{ForwardDiff} that uses forward AD. Hence, it would be interesting to see how the different implementations compare as the functions evaluated increase in complexity. In addition to \texttt{ForwardDiff}, I have added two AD implementations from the MATLAB Reservoir Simulation Toolbox (MRST) \citep{mrstHomepage} to the benchmark, to see how the Julia implementations compare to optimized AD tools in MATLAB. The basic implementation in MRST is similar to \texttt{FAD}, where the Jacobians has a sparse matrix structure, and is henceforth referred to as \texttt{MRST}. The second MATLAB implementation is similar to \texttt{CJAD} in the sense that it exploits the diagonal structure of some Jacobians. This method is called \texttt{MRST\_diagonal}. To benchmark the efficiency of the different AD tools, I have evaluated the vector function $f: \Re^{n\times 3} \rightarrow \Re^n $, where
+As mentioned in \autoref{sec:ADInJulia}, Julia already has an AD library called \texttt{ForwardDiff} \citep{ForwardDiff} that uses forward AD. Hence, it would be interesting to see how the different implementations compare as the functions evaluated increase in complexity. In addition to \texttt{ForwardDiff}, I have used two AD implementations from the MATLAB Reservoir Simulation Toolbox (MRST) \citep{mrstHomepage} as benchmarks, to see how the Julia implementations compare to optimized AD tools in MATLAB. The basic implementation in MRST is similar to \texttt{FAD}, where the Jacobians has a sparse matrix structure, and is henceforth referred to as \texttt{MRST}. The second MATLAB implementation is similar to \texttt{CJAD} in the sense that it exploits the diagonal structure of some Jacobians. This method is called \texttt{MRST\_diagonal}. To test the efficiency of the different AD tools, I have evaluated the vector function $f: \Re^{n\times 3} \rightarrow \Re^n $, where
 \begin{equation}
 \label{eq:benchmarkFunction}
 f(x,y,z)  = \exp(2xy) - 4xz^2 + 13x - 7, \qquad x,y,z \in \Re^n.
 \end{equation}
-\autoref{fig:benchmarkADVectorFunction} reports how the computational time\footnote{The benchmarks in Julia are still performed by using the benchmarking library \emph{\cite{BenchmarkTools}}. For benchmarking time in MATLAB I have taken the median of multiple tests using the stopwatch \emph{\cite{TicToc}}.} scales for the different methods, calculating the function value, and the Jacobian of the function, as the length of the vectors ($n$) increases.
+\autoref{fig:benchmarkADVectorFunction} reports how the computational time\footnote{The benchmark tests in Julia are still performed by using the benchmarking library \emph{\cite{BenchmarkTools}}. For measuring time in MATLAB I have taken the median of multiple tests using the stopwatch \emph{\cite{TicToc}}.} scales for the different methods, calculating the function value, and the Jacobian of the function, as the length of the vectors ($n$) increases.
 
 \begin{figure}[H]
     \centering
@@ -343,7 +343,7 @@ f(x,y,z)  = \exp(2xy) - 4xz^2 + 13x - 7, \qquad x,y,z \in \Re^n.
     \caption{Computational time for different methods calculating the value and Jacobian of $f$ in \myeqref{eq:benchmarkFunction} as a function of length of the input vectors.}
     \label{fig:benchmarkADVectorFunction}
 \end{figure}
-\autoref{fig:benchmarkADVectorFunction} reports six different graphs. The first thing you observe is that \texttt{ForwardDiff} scales very badly as n becomes large. This is because it creates and works with the full $3n \times 3n$ Jacobian matrix as discussed in \autoref{sec:ADInJulia}. I stopped the benchmark of \texttt{ForwardDiff} for $n = 3^8$, as the Jacobian at this point already has more than 380 million elements. We can nevertheless observe that for small vectors, the methods implemented in MATLAB, as well as \texttt{FAD} and \texttt{CJAD}, have more overhead than \texttt{ForwardDiff} and the analytic solution. This makes them slower for small $n$, but as $n$ grows, this overhead becomes quickly negligible. Based on \autoref{fig:benchmarkADVectorFunction}, from a numerical simulation point of view, \texttt{ForwardDiff} is useless for obtaining the Jacobian of functions, as it scales badly for increasing $n$.
+\autoref{fig:benchmarkADVectorFunction} reports six different graphs. The first thing you observe is that \texttt{ForwardDiff} scales very badly as n becomes large. This is because it creates and works with the full $3n \times 3n$ Jacobian matrix as discussed in \autoref{sec:ADInJulia}. I stopped the benchmark test of \texttt{ForwardDiff} for $n = 3^8$, as the Jacobian at this point already has more than 380 million elements. We can nevertheless observe that for small vectors, the methods implemented in MATLAB, as well as \texttt{FAD} and \texttt{CJAD}, have more overhead than \texttt{ForwardDiff} and the analytic solution. This makes them slower for small $n$, but as $n$ grows, this overhead becomes quickly negligible. Based on \autoref{fig:benchmarkADVectorFunction}, from a numerical simulation point of view, \texttt{ForwardDiff} is useless for obtaining the Jacobian of functions, as it scales badly for increasing $n$.
 Apart from the conclusion on \texttt{ForwardDiff}, we can observe that it is a change in dominance at $n = 3^7 = 2,187$. For shorter vectors, both methods implemented in Julia are more efficient than the two methods in MATLAB. For $n>2,187$ \texttt{FAD} is the slowest, followed by \texttt{MRST}. Hence, as $n$ becomes larger than $2,187$, the methods in Julia and MATLAB that exploit the diagonal structure of the Jacobian perform better than the ones that only use a sparse matrix structure. This makes sense, as the evaluation of $f$ will only give a diagonal Jacobian. As $n$ becomes large, \texttt{CJAD} and \texttt{MRST\_diagonal} perform very similarly and their computational costs approach the analytic evaluation. What is also interesting to see is that whereas \texttt{CJAD} always is faster than \texttt{FAD}, \texttt{MRST\_diagonal} is less efficient than \texttt{MRST} for short vectors. Assuming that both the MRST implementations are optimized, this indicates that the elegant way of implementing a custom Jacobian in Julia using multiple dispatch adds very little overhead compared to MATLAB. 
 
 The test case just discussed is highly idealized: because each element $f[i]$ of $f$ does not depend on $x[k]$, $y[k]$ and $z[k]$ for $k\not=i$, the Jacobians will keep a diagonal structure for $f$. This means that \texttt{CJAD} never uses its \texttt{SparseJac} type and \texttt{MRST\_diagonal} can use its optimized implementation for diagonal Jacobians. If we, for example, want to calculate something like
