--- a/06_local_AD.tex
+++ b/06_local_AD.tex
@@ -78,10 +78,10 @@ It is surprising that creating a \texttt{LAD} struct should take more time than 
 \lstinputlisting{code/createVariableFast.jl}
 The new profiling result with the updated \texttt{createVariable()} can be seen in \autoref{fig:profileFastCreateVar}. The time spent in \texttt{createVariable()} is almost eliminated and we can see that approximately all the time spent in \texttt{flux} is used for AD calculations. This is what is expected as initialization should be far less time consuming than AD calculations. 
 
-As discussed in \autoref{ch:FlowSolver}, by only looking at assembling of the residual functions, and not the full simulation, we eliminate the linear solver from the benchmark, and we get a better understanding of how efficient the AD tools are. \autoref{tab:FlowSolverAssemblyTestWithLAD} is the same table as \autoref{tab:FlowSolverAssemblyTest}, assembling the residual functions 100 times, but with the benchmarked time for Local AD added to the end of the table.
+As discussed in \autoref{ch:FlowSolver}, by only looking at assembling of the residual functions, and not the full simulation, we eliminate the linear solver from the benchmark test, and we get a better understanding of how efficient the AD tools are. \autoref{tab:FlowSolverAssemblyTestWithLAD} is the same table as \autoref{tab:FlowSolverAssemblyTest}, assembling the residual functions 100 times, but with the measured time for Local AD added to the end of the table.
 \begin{table}[htb]
     \centering
-    \caption{Table with speed benchmarks of different AD methods assembling the "Single-Phase Compressible AD Solver" residual function 100 times for different discretizations.}
+    \caption{Table with speed tests of different AD methods assembling the "Single-Phase Compressible AD Solver" residual function 100 times for different discretizations.}
     \label{tab:FlowSolverAssemblyTestWithLAD}
     \def\arraystretch{1.5}
     \begin{tabular}{ccccc}
@@ -96,7 +96,7 @@ The table shows that the local AD approach is at least six times faster than the
 
 \section{Two-Phase Incompressible Flow}
 \label{sec:TwoPhaseSimulation}
-Previously in this thesis, I have only looked at primary production, where we have single-phase flow, with oil as the only fluid present. As explained in the introduction, at most 30\% of the oil in the reservoir will be extracted unless we apply external forces to the reservoir. This normally consists of injecting either water, gas, or both, into the reservoir in a secondary production. There is also a third production phase called enhanced oil recovery or tertiary production, but as the purpose of this thesis is not oil recovery, but to see how the AD tools perform when simulating oil recovery, I will not go into this subject. More detailed information about oil recovery can be found in \citet{lieMrstUrl}. I will also describe a simplified model of secondary production, where sufficient information for this example is that we want to simulate how water flows from an injector and into a reservoir full of oil. This will be simulated for a subregion of Model 2 from the 10th SPE Comparative Solution Project \emph{\citep{SPE10}}. This model represents a simplified reservoir geometry with somewhat exaggerated geological heterogeneity and was created as a challenging case to benchmark upscaling methods against each other. Like in \autoref{ch:FlowSolver}, I have called MATLAB and MRST from Julia to initialize the SPE10 grid and to make plots.
+Previously in this thesis, I have only looked at primary production, where we have single-phase flow, with oil as the only fluid present. As explained in the introduction, at most 30\% of the oil in the reservoir will be extracted unless we apply external forces to the reservoir. This normally consists of injecting either water, gas, or both, into the reservoir in a secondary production. There is also a third production phase called enhanced oil recovery or tertiary production, but as the purpose of this thesis is not oil recovery, but to see how the AD tools perform when simulating oil recovery, I will not go into this subject. More detailed information about oil recovery can be found in \citet{lieMrstUrl}. I will also describe a simplified model of secondary production, where sufficient information for this example is that we want to simulate how water flows from an injector and into a reservoir full of oil. This will be simulated for a subregion of Model 2 from the 10th SPE Comparative Solution Project \emph{\citep{SPE10}}. This model represents a simplified reservoir geometry with somewhat exaggerated geological heterogeneity and was created as a challenging case to benchmark test upscaling methods against each other. Like in \autoref{ch:FlowSolver}, I have called MATLAB and MRST from Julia to initialize the SPE10 grid and to make plots.
 
 The SPE10 (Model 2) grid is split into 85 layers. Each layer contains 60$\times$220 cells, making the total number of grid cells 1,122,000. To simplify the implementation, I will only look at a single layer, layer 5, making the problem two-dimensional with 13,200 cells. The SPE10 grid differs from the grid in \autoref{ch:FlowSolver} in that the permeability and porosity varies throughout the grid. This will affect the path of the water flow. \autoref{fig:porositySPE10} shows the porosity in the grid and \autoref{fig:permeabilitySPE10} shows a logarithmic color plot of the permeability. Both figures also display the placement of the water injector in the center of the grid, and the four wells at each corner. \autoref{fig:porositySPE10} shows that the rock around wells P3 and P4 are very dense (low porosity) and \autoref{fig:permeabilitySPE10} naturally shows that the permeability is also low in this area. This gives us an expectation that the injected water will primarily flow to the left.
 \begin{figure}[H]
@@ -184,10 +184,10 @@ Even though we are most interested to see how the AD tools perform, we also have
     \label{fig:waterSatResultsSPE10}
 \end{figure}
 
-To benchmark the AD performance in the two-phase simulation, I have, similar to the previous benchmarks, separated the AD calculations from the linear solver. The simulation in \autoref{fig:waterSatResultsSPE10} used approximately 150 time steps, and for each time step, the Newton--Raphson method used two iterations to solve the pressure equations and approximately six iterations to solve the transport equations. The benchmark I have performed is essentially this same simulation, but without the linear solver and the update of the pressure and the water saturation. This will give us a good estimation on how much time the simulator spend on AD during the simulation. As mentioned in \autoref{sec:FlowSolverResults}, since the benchmark does not update the pressure and water saturation, we need to double check that the compiler does not understand that it can skip some iterations, since it calculates the same thing over and over again. It was not the case in \autoref{sec:FlowSolverResults}, and it is not the case here. The benchmark is performed for the local AD method, the \texttt{CJAD} method and for \texttt{MRST}. The results of the benchmark can be seen in \autoref{tab:TwoPhaseBenchmark}. The table shows that \texttt{CJAD} and \texttt{MRST} perform similar, with approximately 30 seconds in total. The local AD outperforms both the two other methods, and for this benchmark, it is approximately five times as fast.
+To benchmark test the AD performance in the two-phase simulation, the AD calculations are separated from the linear solver, similar to the previous tests. The simulation in \autoref{fig:waterSatResultsSPE10} used approximately 150 time steps, and for each time step, the Newton--Raphson method used two iterations to solve the pressure equations and approximately six iterations to solve the transport equations. The benchmark test is essentially the same simulation, but without the linear solver and the update of the pressure and water saturation. This will give us a good estimation on how much time the simulator spend on AD during the simulation. As mentioned in \autoref{sec:FlowSolverResults}, since the test does not update the pressure and water saturation, we need to double check that the compiler does not understand that it can skip iterations, since it calculates the same thing over and over again. It was not the case in \autoref{sec:FlowSolverResults}, and it is not the case here. The test is performed for the local AD method and the \texttt{CJAD} method, with the \texttt{MRST} method as a benchmark. The results of the test can be seen in \autoref{tab:TwoPhaseBenchmark}. The table shows that \texttt{CJAD} and \texttt{MRST} perform similar, with approximately 30 seconds in total. The local AD outperforms both of the two other methods, and for this specific test, it is approximately five times as fast.
 \begin{table}[htb]
     \centering
-    \caption{Write caption}
+    \caption{Table with speed tests of different AD methods assembling the two-phase incompressible flow residual     equations. The number of equations assembled corresponds to what was performed in the simulation for \autoref{fig:waterSatResultsSPE10}.}
     \label{tab:TwoPhaseBenchmark}
     \def\arraystretch{1.5}
     \begin{tabular}{ccc}
