--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -1,10 +1,11 @@
 %\let\cleardoublepage\clearpage
 \chapter*{Abstract}
 \addcontentsline{toc}{chapter}{Abstract}
-This thesis gives an introduction to what Automatic Differentiation (AD) is and how it can be used to calculate the derivatives of any function as precise as an analytic expression, with very little computational effort. This has been used to elegantly solve partial differential equations, describing flow in porous media, using a finite volume method and a discretization of the gradient- and divergence operators. The goal of the thesis has been to investigate whether the new programming language called Julia, can be used both as a language for quickly prototyping of new oil recovery simulators, as well as to implement highly efficient industrial simulators.
+This thesis provides an introduction to Automatic Differentiation (AD) and how it can be utilized to calculate the derivatives of any function with the same precision as an analytic expression, with very little computational effort. This has been used to elegantly solve partial differential equations, describing flow in porous media, using a finite volume method and a discretization of the gradient- and divergence operators. The goal of the thesis has been to investigate whether the new programming language called Julia, can be used both as a language for quickly prototyping of new oil recovery simulators, as well as to implement highly efficient industrial simulators.
 
-Three different AD libraries has been implemented in Julia and compared to implementations from the MATLAB Reservoir Simulation Toolbox (MRST) \emph{\citep{mrstHomepage}}, created by the Computational Geosciences  group  in  the  department  of  Mathematics  and  Cybernetics  at  SINTEF Digital. This is a toolbox meant for quick prototyping with high-level and user-friendly AD tools. The first two implementations in Julia are inspired by the AD tools in MRST and they are called \texttt{ForwardAutoDiff}(\texttt{FAD}) and \texttt{CustomJacobianAutoDiff}(\texttt{CJAD}). The third implementation is inspired by the implementation of AD in OPM \emph{\citep{opm}}. OPM is a toolbox by the same group at SINTEF, made for creating efficient industrial simulators in C and C++. 
+Three different AD libraries have been implemented in Julia and compared to implementations from the MATLAB Reservoir Simulation Toolbox (MRST) \emph{\citep{mrstHomepage}}, created by the Computational Geosciences  group  at  the  department  of  Mathematics  and  Cybernetics  at  SINTEF Digital. This is a toolbox designed for quick prototyping with high-level and user-friendly AD tools. The first two implementations in Julia are inspired by the AD tools in MRST: \texttt{ForwardAutoDiff}(\texttt{FAD}) and \texttt{CustomJacobianAutoDiff}(\texttt{CJAD}). The third implementation is inspired by the implementation of AD in OPM \emph{\citep{opm}}. OPM is a toolbox developed by the same group at SINTEF for creating efficient industrial simulators in C and C++. 
 
-To benchmark test the three AD methods, two simulations have been implemented. The first is a single-phase flow solver, simulating the pressure drop in a reservoir when producing oil. \texttt{FAD} is the slowest method being approximately two times slower than \texttt{CJAD} and the implementation in MRST. While \texttt{CJAD} and MRST perform very similar, the method of Local AD is approximately six times faster than these two. The second implemented simulation is a two-phase flow solver, simulating how water flows when injected into a reservoir. This simulation is implemented for \texttt{CJAD} and MRST, which again perform similarly, as well as the method using local AD, which is approximately five times faster.
+To benchmark the three AD methods, two simulations have been implemented. The first one was a single-phase flow solver, simulating the pressure drop in a reservoir when producing oil. \texttt{FAD} was the slowest method being approximately two times slower than simulators with both \texttt{CJAD} and the implementation in MRST. While \texttt{CJAD} and MRST exhibit similar performance, the method of Local AD is approximately six times faster than these two. The second simulation was a two-phase flow solver, simulating how water flows when injected into a reservoir. Analogous to the first simulation, \texttt{CJAD} and MRST yielded similar performance, while the method using local AD was approximately five times faster.
+This simulation is implemented for \texttt{CJAD} and MRST, which again perform similarly, as well as the method using local AD, which is approximately five times faster.
 
-The benchmark tests give promising results indicating that Julia could be a language where it is possible to write prototypes of simulators, using a user-friendly AD tool like \texttt{CJAD}, as well as creating high performance industrial simulators, using an AD tool like local AD.
+The benchmarks give promising results indicating that Julia could be a language enabling making prototypes of simulators, using a user-friendly AD tool like \texttt{CJAD}, as well as creating high performance industrial simulators, using an AD tool like local AD.
