--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -1,9 +1,9 @@
 %\let\cleardoublepage\clearpage
 \chapter*{Abstract}
 \addcontentsline{toc}{chapter}{Abstract}
-This thesis provides an introduction to Automatic Differentiation (AD) and how it can be utilized to calculate the derivatives of any function with the same precision as an analytic expression, with very little computational effort. This has been used to elegantly solve partial differential equations (PDEs), describing flow in porous media, using a finite volume method and a discretization of the gradient- and divergence operators. The goal of the thesis has been to investigate whether the new programming language called Julia, can be used both as a language for quickly prototyping of new oil recovery simulators, as well as to implement highly efficient industrial simulators.
+This thesis provides an introduction to Automatic Differentiation (AD) and how it can be utilized to calculate the derivatives of any function with the same precision as an analytic expression, with very little computational effort. This has been used to elegantly solve partial differential equations (PDEs), describing flow in porous media, using a finite volume method and a discretization of the gradient- and divergence operator. The goal of the thesis has been to investigate whether the new programming language called Julia, can be used both as a language for quickly prototyping of new oil recovery simulators, as well as to implement highly efficient industrial simulators.
 
-Three different AD libraries have been implemented in Julia and compared to implementations from the MATLAB Reservoir Simulation Toolbox (MRST) \emph{\citep{mrstHomepage}}, created by the Computational Geosciences  group  at  the  department  of  Mathematics  and  Cybernetics  at  SINTEF Digital. This is a toolbox designed for quick prototyping with high-level and user-friendly AD tools. The first two implementations in Julia are inspired by the AD tools in MRST: \texttt{ForwardAutoDiff}(\texttt{FAD}) and \texttt{CustomJacobianAutoDiff}(\texttt{CJAD}). The third implementation is inspired by the implementation of AD in OPM \emph{\citep{opm}}. OPM is a toolbox developed by the same group at SINTEF for creating efficient industrial simulators in C and C++. 
+Three different AD libraries have been implemented in Julia and compared to implementations from the MATLAB Reservoir Simulation Toolbox (MRST) \emph{\citep{mrstHomepage}}, created by the Computational Geosciences  group  at  the  department  of  Mathematics  and  Cybernetics  at  SINTEF Digital. This is a toolbox designed for quick prototyping with high-level and user-friendly AD tools. The first two implementations in Julia are inspired by the AD tools in MRST: \texttt{ForwardAutoDiff}(\texttt{FAD}) and \texttt{CustomJacobianAutoDiff}(\texttt{CJAD}). The third implementation is inspired by the implementation of AD in the Open Porous Media (OPM) Flow simulator \emph{\citep{opm}}. OPM is a toolbox developed by the same group at SINTEF for creating efficient industrial simulators in C and C++. 
 
 To benchmark the three AD methods, two simulations have been implemented. The first one was a single-phase flow solver, simulating the pressure drop in a reservoir when producing oil. \texttt{FAD} was the slowest method being approximately two times slower than both \texttt{CJAD} and the implementation in MRST. While \texttt{CJAD} and MRST exhibit similar performance, the method of Local AD is approximately six times faster than these two. The second simulation was a two-phase flow solver, simulating how water flows when injected into a reservoir. Analogous to the first simulation, \texttt{CJAD} and MRST yielded similar performance, while the method using local AD was approximately five times faster.
 
